--- a/video/index.html
+++ b/video/index.html
@@ -36,6 +36,10 @@
         display: block;
         position: absolute;
       }
+
+      .hidden {
+        display: none;
+      }
     </style>
     <script src="../jquery-2.1.4.js"></script>
     <script src="core.js"></script>
@@ -51,5 +55,7 @@
     <div class="container">
       <button id="start-button">GO!</button>
     </div>
+
+    <div class="hidden"></div>
   </body>
 </html>
