--- a/example/index.html
+++ b/example/index.html
@@ -12,7 +12,7 @@
     <div class="container"></div>
   </body>
 
-  <script src="ajax.js"></script>
+  <script src="/shared/ajax.js"></script>
   <script src="main.js"></script>
 </html>
 
