--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     <script src="lib/js/head.min.js"></script>
     <script src="js/reveal.js"></script>
 
-  <script src="/shared/jquery-2.1.4.js"></script>
-  <script src="/shared/ajax.js"></script>
-  <script src="/cissy/main.js"></script>
+  <script src="shared/jquery-2.1.4.js"></script>
+  <script src="shared/ajax.js"></script>
+  <script src="cissy/main.js"></script>
     <script>
 
       // Full list of configuration options available at:
