--- a/sampler/index.html
+++ b/sampler/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="/shared/jquery-2.1.4.js"></script>
-    <script src="/shared/ajax.js"></script>
+    <script src="../shared/jquery-2.1.4.js"></script>
+    <script src="../shared/ajax.js"></script>
     <script src="audio.js"></script>
     <script src="canvas.js"></script>
     <script src="sample.js"></script>
