--- a/video/index.html
+++ b/video/index.html
@@ -41,7 +41,7 @@
         display: none;
       }
     </style>
-    <script src="/shared/jquery-2.1.4.js"></script>
+    <script src="../shared/jquery-2.1.4.js"></script>
     <script src="core.js"></script>
     <script src="video.js"></script>
   </head>
