Add google analytics

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <title>Making music with the Web Audio API</title>
 
-    <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-    <meta name="author" content="Hakim El Hattab">
+    <meta name="description" content="A presentation about using the Web Audio API to make music">
+    <meta name="author" content="Nick Morgan">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -593,6 +593,16 @@ getAudioBuffer(ctx, 'shared/cissy-strut.mp3', function (buffer) {
         ]
       });
 
+    </script>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount','UA-3174668-9']);
+      _gaq.push(['_trackPageview'],['_trackPageLoadTime']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
     </script>
 
   </body>
