Change font size and add slide number

--- a/index.html
+++ b/index.html
@@ -547,8 +547,7 @@ getAudioBuffer(ctx, 'shared/cissy-strut.mp3', function (buffer) {
         <section style="text-align: left;">
           <h1>THE END</h1>
           <p>
-            - <a href="https://github.com/skilldrick/audio-talk">These slides on Github</a>
-            <br>
+            - <a href="https://github.com/skilldrick/audio-talk">These slides on Github</a> <br>
             - <a href="http://skilldrick.co.uk/video">Video!!!</a>
           </p>
         </section>
@@ -579,6 +578,7 @@ getAudioBuffer(ctx, 'shared/cissy-strut.mp3', function (buffer) {
         progress: true,
         history: true,
         center: true,
+        slideNumber: true,
 
         transition: 'slide', // none/fade/slide/convex/concave/zoom
 
