Update links at the end

--- a/index.html
+++ b/index.html
@@ -549,7 +549,8 @@ getAudioBuffer(ctx, 'shared/cissy-strut.mp3', function (buffer) {
           <h1>THE END</h1>
           <p>
             - <a href="https://github.com/skilldrick/audio-talk">These slides on Github</a> <br>
-            - <a href="http://skilldrick.co.uk/video">Video!!!</a>
+            - <a href="sampler">JS Sampler using Cissy Strut</a> <br>
+            - <a href="video">Video!!!</a>
           </p>
         </section>
 
