Last minute wafflejs changes

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@ getAudioBuffer(ctx, 'shared/cissy-strut.mp3', function (buffer) {
           <h2>THE END</h2>
           <h3>Some Stuff I Made</h3>
           <ul>
-            <li><a href="https://github.com/skilldrick/audio-talk">These slides on Github</a></li>
+            <li>These slides: <a href="http://skilldrick.co.uk/audio-talk">skilldrick.co.uk/audio-talk</a> / <a href="https://github.com/skilldrick/audio-talk">On Github</a></li>
 
             <li><a href="sampler">JS Sampler using Cissy Strut</a></li>
             <li><a href="http://skilldrick.co.uk/samplejs">JS Sampler using another song (with delay and distortion)</a></li>
@@ -556,11 +556,15 @@ getAudioBuffer(ctx, 'shared/cissy-strut.mp3', function (buffer) {
             <li><a href="http://skilldrick.co.uk/tonegame">Tonegame: A tone-guessing game</a></li>
             <li><a href="video">Video for Cissy, So What, Superstition, Papa, Chameleon</a></li>
           </ul>
-          </p>
 
           <h3>Other links</h3>
           <ul>
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Audio_API">MDN docs</a></li>
+          </ul>
+
+          <h3>Me</h3>
+          <ul>
+            <li><a href="https://twitter.com/skilldrick">@skilldrick</a></li>
           </ul>
 
 
